// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`rhachet repo introspect given: [case0] --help is invoked when: [t0] repo introspect --help then: help output matches snapshot 1`] = `
"Usage: rhachet repo introspect [options]

generate rhachet.repo.yml from package getRoleRegistry export

Options:
  -o, --output <path>  output path (default: rhachet.repo.yml, use "-" for
                       stdout) (default: "rhachet.repo.yml")
  -h, --help           display help for command
"
`;

exports[`rhachet repo introspect given: [case1] repo with rhachet.use.ts that defines roles when: [t0] repo introspect with default output then: yml content matches snapshot 1`] = `
"slug: test
readme: readme.md
roles:
  - slug: mechanic
    readme: roles/mechanic/readme.md
    briefs:
      dirs: roles/mechanic/briefs
    skills:
      dirs: roles/mechanic/skills
"
`;

exports[`rhachet repo introspect given: [case1] repo with rhachet.use.ts that defines roles when: [t1] repo introspect --output - (stdout) then: stdout matches snapshot 1`] = `
"
🔭 load getRoleRegistry from rhachet-roles-test...

✨ Generate manifest for "test"...

slug: test
readme: readme.md
roles:
  - slug: mechanic
    readme: roles/mechanic/readme.md
    briefs:
      dirs: roles/mechanic/briefs
    skills:
      dirs: roles/mechanic/skills

"
`;

exports[`rhachet repo introspect given: [case2] rhachet-roles package without getRoleRegistry export when: [t0] repo introspect then: error output matches snapshot 1`] = `
"
✋ ConstraintError: package does not export getRoleRegistry

{
  "packageName": "rhachet-roles-test"
}

[args] repo,introspect

"
`;

exports[`rhachet repo introspect given: [case3] rhachet-roles package with executable .sh skill when: [t0] repo introspect then: yml content matches snapshot 1`] = `
"slug: test
readme: readme.md
roles:
  - slug: mechanic
    readme: roles/mechanic/readme.md
    briefs:
      dirs: roles/mechanic/briefs
    skills:
      dirs: roles/mechanic/skills
"
`;

exports[`rhachet repo introspect given: [case4] rhachet-roles package with non-executable .sh skill when: [t0] repo introspect then: error output matches snapshot 1`] = `
"
✋ ConstraintError: non-executable skill files detected

these .sh files in skills directories are not marked executable:
  - <testDir>/roles/mechanic/skills/broken-skill.sh

fix: run \`chmod +x <path>\` for each file, or ensure git preserves execute bits

{
  "nonExecutablePaths": [
    "<testDir>/roles/mechanic/skills/broken-skill.sh"
  ]
}

[args] repo,introspect

"
`;

exports[`rhachet repo introspect given: [case5] rhachet-roles package with multiple non-executable .sh skills when: [t0] repo introspect then: error output matches snapshot 1`] = `
"
✋ ConstraintError: non-executable skill files detected

these .sh files in skills directories are not marked executable:
  - <testDir>/roles/mechanic/skills/broken1.sh
  - <testDir>/roles/mechanic/skills/broken2.sh

fix: run \`chmod +x <path>\` for each file, or ensure git preserves execute bits

{
  "nonExecutablePaths": [
    "<testDir>/roles/mechanic/skills/broken1.sh",
    "<testDir>/roles/mechanic/skills/broken2.sh"
  ]
}

[args] repo,introspect

"
`;

exports[`rhachet repo introspect given: [case6] rhachet-roles package with orphan .md.min in briefs when: [t0] repo introspect then: error output matches snapshot 1`] = `
"
✋ ConstraintError: orphan .md.min file(s) detected without .md source:
  - <testDir>/roles/mechanic/briefs/orphan.md.min

each .md.min file must have a matched .md source file.

{
  "hint": "a .md.min is derived from its .md source — restore the absent .md, or delete the orphan .md.min",
  "orphanPaths": [
    "<testDir>/roles/mechanic/briefs/orphan.md.min"
  ]
}

[args] repo,introspect

"
`;

exports[`rhachet repo introspect given: [case7] rhachet-roles package with role that has boot and keyrack when: [t0] repo introspect then: yml content matches snapshot 1`] = `
"slug: test
readme: readme.md
roles:
  - slug: mechanic
    readme: roles/mechanic/readme.md
    briefs:
      dirs: roles/mechanic/briefs
    skills:
      dirs: roles/mechanic/skills
    boot: roles/mechanic/boot.yml
    keyrack: roles/mechanic/keyrack.yml
"
`;

exports[`rhachet repo introspect given: [case8] rhachet-roles package with only .ts/.md files in skills when: [t0] repo introspect then: yml content matches snapshot 1`] = `
"slug: test
readme: readme.md
roles:
  - slug: mechanic
    readme: roles/mechanic/readme.md
    briefs:
      dirs: roles/mechanic/briefs
    skills:
      dirs: roles/mechanic/skills
"
`;

exports[`rhachet repo introspect given: [case9] rhachet-roles package with bootable content and no boot hook when: [t0] repo introspect then: yml content matches snapshot 1`] = `
"slug: test-no-hook
readme: readme.md
roles:
  - slug: mechanic
    readme: roles/mechanic/readme.md
    briefs:
      dirs: roles/mechanic/briefs
    skills:
      dirs: roles/mechanic/skills
"
`;

exports[`rhachet repo introspect given: [case10] rhachet-roles package with forbidden npx hook when: [t0] repo introspect then: error output matches snapshot 1`] = `
"
✋ ConstraintError: hooks with forbidden npx patterns
   │
   ├─ these hooks use npx which adds 500ms-2s latency per invocation:
   │
   ├─ mechanic
   │  ├─ hook: onBrain.onBoot[0]
   │  ├─ command: npx rhachet run --skill say-hello
   │  └─ hint: use './node_modules/.bin/rhachet run --skill say-hello'
   │
   └─ fix: replace 'npx rhachet' with './node_modules/.bin/rhachet' or 'rhachet' (global)

{
  "violations": [
    {
      "roleSlug": "mechanic",
      "hookType": "onBoot",
      "hookIndex": 0,
      "command": "npx rhachet run --skill say-hello"
    }
  ]
}

[args] repo,introspect

"
`;

exports[`rhachet repo introspect given: [case11] a role whose boot.yml declares a budget its payload exceeds when: [t0] repo introspect then: the whole refusal matches its snapshot 1`] = `
"🧢 repo introspect (role=mechanic) — roles/mechanic/boot.yml
   ├─ ✋ ConstraintError: over budget
   │  ├─ budget   = 20 tokens   (declared in boot.yml)
   │  ├─ payload  = 454 tokens   (full emitted payload, o200k_base)
   │  └─ over by  = 434 tokens   (2270% of budget)
   │
   ├─ some resources must go — you choose which
   │  └─ rhx cost --what roles/mechanic/boot.yml   sorts every batch by what it costs
   │
   └─ fix — four strategies, cheapest first
      ├─ catalogize  replace a set with one catalog that indexes it
      ├─ condense    author an x.md.min beside x.md
      ├─ reference   move a say entry to ref (it stays addressable, costs its path line)
      └─ eliminate   list what does not earn its boot under \`not\` (the file stays)


✋ ConstraintError: boot payload exceeds its declared budget

{
  "hint": "trim a resource — catalogize a set, condense or ref a say entry, list one under \`not\` — or raise budget.tokens deliberately",
  "budget": 20,
  "payload": 454,
  "over": 434
}

[args] repo,introspect

"
`;

exports[`rhachet repo introspect given: [case12] rhachet-roles package whose role boots itself from a hook when: [t0] repo introspect then: error output matches snapshot 1`] = `
"
✋ ConstraintError: hooks that boot their own role
   │
   ├─ briefs reach a session via the brain dir boot.md render, so these hooks are redundant:
   │
   ├─ mechanic
   │  ├─ hook: onBrain.onBoot[1]
   │  └─ command: ./node_modules/.bin/rhachet roles boot --role mechanic
   │
   └─ hint: delete each \`roles boot --role\` hook; boot.md already renders these roles

{
  "violations": [
    {
      "roleSlug": "mechanic",
      "hookType": "onBoot",
      "hookIndex": 1,
      "command": "./node_modules/.bin/rhachet roles boot --role mechanic"
    }
  ]
}

[args] repo,introspect

"
`;
